--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -4,22 +4,27 @@
 @tailwind components;
 @tailwind utilities;
 
+.layout {
+  max-width: 68rem;
+  @apply mx-auto w-11/12;
+}
+
 .right-2 {
   right: 0.5rem;
 }
 
 .top-2 {
-  top: .5rem;
+  top: 0.5rem;
 }
 
 .bg-gray-700 {
   --tw-bg-opacity: 1;
-  background-color: rgb(55 65 81/var(--tw-bg-opacity));
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
 }
 
 .text-gray-300 {
   --tw-text-opacity: 1;
-  color: rgb(209 213 219/var(--tw-text-opacity));
+  color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
 .border-green-400 {
@@ -92,3 +97,36 @@ input:-webkit-autofill:focus {
   display: inline-block;
   vertical-align: middle;
 }
+
+/* #region  /**=========== Fade In =========== */
+[data-fade] {
+  @apply translate-y-10 opacity-0 transition duration-[400ms] ease-out motion-reduce:translate-y-0 motion-reduce:opacity-100;
+}
+.fade-in-start [data-fade] {
+  @apply translate-y-0 opacity-100;
+}
+.fade-in-start [data-fade='1'] {
+  transition-delay: 100ms;
+}
+.fade-in-start [data-fade='2'] {
+  transition-delay: 200ms;
+}
+.fade-in-start [data-fade='3'] {
+  transition-delay: 300ms;
+}
+.fade-in-start [data-fade='4'] {
+  transition-delay: 400ms;
+}
+.fade-in-start [data-fade='5'] {
+  transition-delay: 500ms;
+}
+.fade-in-start [data-fade='6'] {
+  transition-delay: 600ms;
+}
+.fade-in-start [data-fade='7'] {
+  transition-delay: 700ms;
+}
+.fade-in-start [data-fade='8'] {
+  transition-delay: 800ms;
+}
+/* #endregion  /**======== Fade In =========== */
